# cli_animations

./: .gitignore  Cargo.toml
src/: lib.rs  utils.rs
